[metadata]
description-file = README.rst

[nosetests]
verbosity=3
with-doctest=1
detailed-errors=1
debug=nose.loader
#pdb=1
#pdb-failures=1
with-coverage=1
cover-package=statsd

[build_sphinx]
source-dir = docs/
build-dir  = docs/_build
all_files  = 1

[upload_sphinx]
upload-dir = docs/_build/html

[bdist_wheel]
universal = 1

[flake8]
ignore = W391
exclude = docs/*
